# rele

./: .codecov.yml  .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  requirements.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pr.yml  release-please.yml
docs/: conf.py  index.rst  publish.rst  reference.rst  settings.rst  subscription.rst  worker.rst
docs/_static/: style.css
docs/_templates/: sidebar.html
docs/ai/: architecture.md  gotchas.md  release-process.md  testing.md
docs/api/: client.rst  middleware.rst  publish.rst  settings.rst  subscription.rst
docs/guides/: basics.rst  django.rst  emulator.rst  filters.rst  flask.rst  rele_and_emulator.rst  unrecoverable_middleware.rst
docs/modules/: configuration.rst  worker.rst
docs/quickstart/: filters.rst  rele_and_emulator.rst
rele/: __init__.py  __main__.py  apps.py  cli.py  client.py  config.py  discover.py  middleware.py  publishing.py  retry_policy.py  subscription.py  worker.py
rele/contrib/: __init__.py  django_db_connections_middleware.py  django_db_middleware.py  flask_middleware.py  logging_middleware.py  unrecoverable_middleware.py  verbose_logging_middleware.py
rele/management/: discover.py
rele/management/commands/: discover.py  document.py  runrele.py  showsubscriptions.py
requirements/: base.txt  constraints.txt  django.txt  test.txt
tests/: conftest.py  dummy-pub-sub-credentials.json  settings.py  subs.py  test_client.py  test_config.py  test_discover.py  test_middleware.py  test_publisher.py  test_publishing.py  test_retry_policy.py  test_runrele.py  test_subscriber.py  test_subscription.py  test_worker.py
tests/commands/: test_document.py  test_rele_cli.py  test_runrele.py  test_showsubscriptions.py
tests/contrib/: test_logging_middleware.py  test_verbose_logging_middleware.py
tests/management/: test_discover.py
tests/more_subs/: subs.py
tests/sample_app/: subs.py
tests/sample_app/another_folder/: subs.py
tests/sample_app/infrastructure/subs/: __init__.py  a_sub_file.py
tests/sample_app/subs/: another_sub_file.py
tests/sample_app_2/a_folder/: subs.py
tests/sample_app_2/infrastructure/subs/: __init__.py  a_sub_file.py
tests/sample_app_2/subs/: __init__.py
tests/sample_pypi_package/: setup.py
tests/sample_pypi_package/src/: settings.py
tests/sample_pypi_package/src/sample_pypi_package/: subs.py
