[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rele"
dynamic = ["version"]
description = "Relé makes integration with Google PubSub easier."
readme = "README.md"
authors = [
    { name = "Mercadona Tech", email = "software.online@mercadona.es" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS.md"]
requires-python = ">=3.10"
keywords = ["rele"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-auth",
    "google-cloud-pubsub>=2.7.1,!=2.31.0",
]

[project.optional-dependencies]
django = ["django", "tabulate"]
flask = ["flask"]

[project.scripts]
rele-cli = "rele.__main__:main"

[project.urls]
Homepage = "https://github.com/mercadona/rele"
Documentation = "https://mercadonarele.readthedocs.io"
Changelog = "https://github.com/mercadona/rele/blob/master/CHANGELOG.rst"

[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-cov>=2.7.0",
    "pytest-django>=4.5",
    "coverage>=4.4.0",
    "codecov>=2.0.0",
    "black==26.5.1",
    "isort~=6.1.0",
    "freezegun==1.5.5",
    "django",
    "tabulate",
    "sample-pypi-package",
]
docs = ["Sphinx"]
deploy = ["twine"]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
sample-pypi-package = { path = "tests/sample_pypi_package" }

[tool.hatch.version]
path = "rele/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["rele"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'

[tool.isort]
line_length = 90
default_section = "THIRDPARTY"
known_first_party = ["rele"]
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
skip = ["docs", ".venv"]

[tool.coverage.run]
include = ["*"]
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]
