[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rele"
dynamic = ["version"]
description = "Relé makes integration with Google PubSub easier."
readme = "README.md"
authors = [
    { name = "Mercadona Tech", email = "software.online@mercadona.es" },
]
license = "Apache-2.0"
license-files = ["LICENSE", "AUTHORS.md"]
requires-python = ">=3.10"
keywords = ["rele"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-auth",
    "google-cloud-pubsub>=2.7.1,!=2.31.0",
]

[project.optional-dependencies]
django = ["django", "tabulate"]
flask = ["flask"]

[project.scripts]
rele-cli = "rele.__main__:main"

[project.urls]
Homepage = "https://github.com/mercadona/rele"
Documentation = "https://mercadonarele.readthedocs.io"
Changelog = "https://github.com/mercadona/rele/blob/master/CHANGELOG.rst"

[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-cov>=2.7.0",
    "pytest-django>=4.5",
    "coverage>=4.4.0",
    "codecov>=2.0.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "freezegun==1.5.5",
    "django",
    "tabulate",
    "sample-pypi-package",
]
docs = ["Sphinx"]
deploy = ["twine"]

[tool.uv]
default-groups = ["test"]

[tool.uv.sources]
sample-pypi-package = { path = "tests/sample_pypi_package" }

[tool.hatch.version]
path = "rele/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["rele"]

[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "C90", "UP", "B", "N", "RUF"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
# see https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
files = ["rele"]

# this makes things more strict and enforces checking non-annotated code
strict = true

# to keep things clean
warn_redundant_casts = true
warn_unused_ignores = true

# Workaround for bug in MyPy
disallow_subclassing_any = false

# enable these for even more strictness
disallow_untyped_calls = true
disallow_untyped_defs = true

# this will enable checks even for non-annotated methods
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true

# this helps when working with untyped libraries
ignore_missing_imports = true

# depends on the project
namespace_packages = false
explicit_package_bases = false

[tool.coverage.run]
include = ["*"]
omit = ["*/__init__.py"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]
